@startuml
class logic.unit.BaseUnit {
- int row
- int column
- boolean isWhite
- String name
# int hp
# int power
# boolean isFlying
+ int getRow()
+ int getColumn()
+ boolean isWhite()
+ String getName()
+ int getHp()
+ int getPower()
+ boolean isFlying()
+ void setRow(int)
+ void setColumn(int)
+ void setWhite(boolean)
+ void setName(String)
+ void setHp(int)
+ boolean move(int)
+ void attack(ArrayList<BaseUnit>)
}


class logic.game.GameSystem {
- ArrayList<BaseUnit> allWhitePieces
- ArrayList<BaseUnit> allRedPieces
- boolean gameEnd
- {static} GameSystem instance
+ {static} GameSystem getInstance()
+ boolean isGameEnd()
+ void setGameEnd(boolean)
+ ArrayList<BaseUnit> getAllWhitePieces()
+ ArrayList<BaseUnit> getAllRedPieces()
+ void printBoardStatus(ArrayList<BaseUnit>)
+ void removeDeadPieces(ArrayList<BaseUnit>)
+ BaseUnit promote(BaseUnit,int)
}


class logic.unit.FlyingUnit {
+ boolean move(int)
}

class logic.unit.MeleeUnit {
}
class logic.unit.RangeUnit {
+ void attack(ArrayList<BaseUnit>)
}



logic.unit.BaseUnit <|-- logic.unit.FlyingUnit
logic.unit.BaseUnit <|-- logic.unit.MeleeUnit
logic.unit.BaseUnit <|-- logic.unit.RangeUnit
@enduml